--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="padding: 0; margin: 0;">
 
 <head>
   <!-- meta data and font family-->
@@ -22,7 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   <!-- CSS Styles -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles1.css">
 </head>
 
 
@@ -32,26 +32,20 @@
     <div class="container-fluid header-top">
       <nav class="navbar navbar-expand-lg navbar-light" styles="background-color: #fff;">
         <div class="container-fluid navbar-interior">
-          <a class="navbar-brand" href="#">Sine<span class="SineMkt">Mkt</span>.</a>
+          <a class="navbar-brand" href="index.html">Sine<span class="SineMkt">Mkt</span>.</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">New Arrival</a>
+                <a class="nav-link" href="C:\Users\aditaa\OneDrive\Documents\new-arrival.html">New Arrival</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Team</a>
@@ -114,28 +108,123 @@
       </div>
 
     </div>
+
+
+    <div class="ellipsis1">
+      <i class="fa-solid fa-ellipsis"></i>
     </div>
-<div class="row" style="color:#808080; margin: 100px 0;">
-  <div class="col-lg-3" style=" padding: 2% 2%; text-align: center;">
-    <img style="margin: 20px;" src="https://images2.imgbox.com/56/21/asFadrhV_o.png" alt="">
-    <h5><a href="" style="margin: 20px; text-decoration: none; color:#FFBF00;">Arm Chair</a></h5>
-    <p>Top quality sofas to decorate your living room and give you that elegant look</p>
-  </div>
-  <div class="col-lg-6" style="padding: 5% 2%; margin-bottom: 50px;">
-    <img style="float: left; margin-right: 8%;" src="https://images2.imgbox.com/54/fe/CpQx6j07_o.png" alt="">
-      <h5><a href="" style="text-decoration: none; color:#FFBF00;">Latest Designed Stool and Chair</a></h5>
-      <p style="margin: 5% 0">Best grade stools and chairs assured to give your home a regal appearance</p>
-      <h6>Sales start from <span style="color: #FFBF00;"> ₦ 40,000</span></h6>
-      <button type="button" class="btn btn-outline-dark" style="color:#808080; margin-top: 2%;">Discover more</button>
-  </div>
-  <div class="col-lg-3" style=" padding: 2% 2%; text-align: center;">
-    <img style="margin-bottom: 5%;" src="https://images2.imgbox.com/a7/f8/AwvpW4rv_o.png" alt="">
-    <h5><a href="" style="margin: 10% auto 10%; text-decoration: none; color:#FFBF00;">Hanging Lamp</a></h5>
-    <p>Light up your rooms with beautiful lights like never before</p>
-  </div>
-</div>
+
+
+    <div class="row" style="color:#808080;">
+      <div class="col-lg-3" style=" padding: 2% 2%; text-align: center;">
+        <img style="margin: 20px;" src="https://images2.imgbox.com/56/21/asFadrhV_o.png" alt="">
+        <h5><a href="" style="margin: 20px; text-decoration: none; color:#FFBF00;">Arm Chair</a></h5>
+        <p>Top quality sofas to decorate your living room and give you that elegant look</p>
+      </div>
+      <div class="col-lg-6" style="padding: 0 2%; margin-bottom: 50px; text-align: center;">
+        <img style="margin-right: 8%;" src="https://images2.imgbox.com/54/fe/CpQx6j07_o.png" alt="">
+        <h5><a href="" style="text-decoration: none; color:#FFBF00;">Latest Designed Stool and Chair</a></h5>
+        <p style="margin: 5% 0">Best grade stools and chairs assured to give your home a regal appearance</p>
+        <h6>Sales start from <span style="color: #FFBF00;"> ₦40,000</span></h6>
+        <button type="button" class="btn btn-outline-dark" style="color:#808080; margin-top: 2%;">Discover more</button>
+      </div>
+      <div class="col-lg-3" style=" padding: 2% 2%; text-align: center;">
+        <img style="margin-bottom: 5%;" src="https://images2.imgbox.com/a7/f8/AwvpW4rv_o.png" alt="">
+        <h5><a href="" style="margin: 10% auto 10%; text-decoration: none; color:#FFBF00;">Hanging Lamp</a></h5>
+        <p>Light up your rooms with beautiful lights like never before</p>
+      </div>
+    </div>
 
   </header>
+
+  <div class="ellipsis2">
+    <i class="fa-solid fa-ellipsis"></i>
+  </div>
+
+  <section style="padding: 0; margin: 0;">
+    <div class="row">
+      <div class="col-lg-12" style="padding: 0; margin: 0;">
+        <img class="bedroom-img" src="https://images2.imgbox.com/61/ed/9xp1spAV_o.jpg" alt="">
+        <div class="z-index container-fluid" style="color: 	#F1F1F3;">
+          <h2>Unlimited Bedroom Collection</h2>
+          <p>Sleep and wake on an exquisite king-size bed like the royalty that you are</p>
+          <h5>Starting from <span style="color: #FFBF00;"> ₦150,000</span></h5>
+          <button type="button" class="btn" style="background-color:#FFBF00; color: #fff;"> View More</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="ellipsis1">
+    <i class="fa-solid fa-ellipsis"></i>
+  </div>
+
+  <section class="clients">
+    <h3 class="clients-text">Our clients</h3>
+    <div class="row">
+      <div class="col-lg-3 clients-img">
+        <img src="https://images2.imgbox.com/9f/be/XGBhrtYS_o.png" alt="">
+      </div>
+      <div class="col-lg-3 clients-img">
+        <img src="https://images2.imgbox.com/bf/5e/9KMdpu96_o.png" alt="">
+      </div>
+      <div class="col-lg-3 clients-img">
+        <img src="https://images2.imgbox.com/a5/ee/Vfu7apE1_o.png" alt="">
+      </div>
+      <div class="col-lg-3 clients-img">
+        <img src="https://images2.imgbox.com/61/1c/3rzMDahc_o.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <div class="ellipsis1">
+    <i class="fa-solid fa-ellipsis"></i>
+  </div>
+
+
+  <section>
+    <div class="row contact">
+      <div class="col-lg-3 contact-text">
+        <h4>Information</h4>
+        <p>About us</p>
+        <p>Contact us</p>
+        <p>News</p>
+        <p>Store</p>
+      </div>
+      <div class="col-lg-3 contact-text">
+        <h4>Collections</h4>
+        <p>Wooden Chair</p>
+        <p>Royal Cloth Sofa</p>
+        <p>Bed</p>
+        <p>Hanging Lamp</p>
+      </div>
+      <div class="col-lg-3 contact-text">
+        <h4>My Accounts</h4>
+        <p>My Account</p>
+        <p>Wishlist</p>
+        <p>Community</p>
+        <p>Order History</p>
+        <p>My Cart</p>
+      </div>
+      <div class="col-lg-3 contact-text">
+        <h4>Newsletter</h4>
+        <p>Subscribe to get latest news, update and information</p>
+        <button type="button" class="btn btn-outline-light btn-xs" style="color:#FFBF00; border: 1px solid;">Subscribe</button>
+      </div>
+    </div>
+  </section>
+
+
+<section class="footer">
+<a class="footer-font-awesome" href="#"><i class="fa-brands fa-facebook"></i></a>
+<a class="footer-font-awesome" href="#"><i class="fa-brands fa-instagram"></i></a>
+<a class="footer-font-awesome" href="#"><i class="fa-solid fa-envelope"></i></a>
+<a class="footer-font-awesome" href="#"><i class="fa-brands fa-twitter"></i></a>
+<a class="footer-font-awesome" href="#"><i class="fa-brands fa-linkedin"></i></a>
+<p>©Copyright. Designed And Developed By David Akanmu</p>
+</section>
+
+
 </body>
 
 </html>
