--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="C:\Users\aditaa\OneDrive\Documents\new-arrival.html">New Arrival</a>
+                <a class="nav-link" href="new-arrival.html">New Arrival</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
