--- a/new-arrival.html
+++ b/new-arrival.html
@@ -45,10 +45,10 @@
             <a class="nav-link" href="new-arrival.html">New Arrival</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="features.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
+            <a class="nav-link" href="team.html">Team</a>
           </li>
         </ul>
         <form class="d-flex">
