--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   <!-- CSS Styles -->
-  <link rel="stylesheet" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\styles4.css">
+  <link rel="stylesheet" href="styles4.css">
 </head>
 
 
@@ -32,23 +32,23 @@
   <header id="header" style="padding: 5%;">
     <nav class="navbar navbar-expand-lg navbar-light" styles="background-color: #fff;">
       <div class="container-fluid navbar-interior">
-        <a class="navbar-brand" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\index.html">Sine<span class="SineMkt">Mkt</span>.</a>
+        <a class="navbar-brand" href="index.html">Sine<span class="SineMkt">Mkt</span>.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\new-arrival.html">New Arrival</a>
+              <a class="nav-link" href="new-arrival.html">New Arrival</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\features.html">Features</a>
+              <a class="nav-link" href="features.html">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\aditaa\OneDrive\Documents\Web Development\CSS Practice Download 4\furn-master\Attempt At Reproduction\team.html">Team</a>
+              <a class="nav-link" href="team.html">Team</a>
             </li>
           </ul>
           <form class="d-flex">
