--- a/new-arrival.html
+++ b/new-arrival.html
@@ -1,65 +1,149 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <!-- meta data and font family-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale-1" <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<head>
+  <!-- meta data and font family-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale-1" <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <!-- favicon -->
-    <link rel="icon" href="favicon (1).ico">
+  <!-- favicon -->
+  <link rel="icon" href="favicon (1).ico">
 
-    <!-- title of site-->
-    <title>Furniture</title>
+  <!-- title of site-->
+  <title>New Arrivals</title>
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/767abd1c11.js" crossorigin="anonymous"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/767abd1c11.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <!-- CSS Styles -->
-    <link rel="stylesheet" href="styles2.css">
-  </head>
+  <!-- CSS Styles -->
+  <link rel="stylesheet" href="styles2.css">
+</head>
 
 
-  <body>
+<body>
 
-<!-- NAVBAR -->
-<header id="header" style="padding: 5%;">
-  <nav class="navbar navbar-expand-lg navbar-light" styles="background-color: #fff;">
-    <div class="container-fluid navbar-interior">
-      <a class="navbar-brand" href="index.html">Sine<span class="SineMkt">Mkt</span>.</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="new-arrival.html">New Arrival</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="features.html">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="team.html">Team</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input type="text" placeholder="&#xF002;  Search" style="font-family: Arial, fontawesome" />
-        </form>
+  <!-- NAVBAR -->
+  <header id="header" style="padding: 5%;">
+    <nav class="navbar navbar-expand-lg navbar-light" styles="background-color: #fff;">
+      <div class="container-fluid navbar-interior">
+        <a class="navbar-brand" href="index.html">Sine<span class="SineMkt">Mkt</span>.</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="new-arrival.html">New Arrival</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="features.html">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="team.html">Team</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input type="text" placeholder="&#xF002;  Search" style="font-family: Arial, fontawesome" />
+          </form>
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+
+
+  <section class="page-content">
+
+    <div class="h2-heading">
+      <h2>New Arrivals</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/91/f3/Uk2jJLUv_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Wooden Chair</h5>
+          <p>₦ 25,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/f7/d7/dDYYd0z8_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Single Armchair</h5>
+          <p>₦ 30,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/5b/5a/KLQHuiyT_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Wooden Armchair</h5>
+          <p>₦ 20,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/68/47/v7Tequxm_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Stylish Chair</h5>
+          <p>₦ 40,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/1c/f3/rhlxOzIC_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Modern Chair</h5>
+          <p>₦ 50,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/5b/83/RTfSz9mh_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Mapple Wood Dining Table</h5>
+          <p>₦ 100,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/03/2f/f6zsbkF1_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Arm Chair</h5>
+          <p>₦ 35,000</p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="div-img-top-mother">
+          <img src="https://images2.imgbox.com/32/cd/2N4rjuRd_o.png" class="div-img-top" alt="...">
+        </div>
+        <div>
+          <h5>Wooden Bed</h5>
+          <p>₦ 90,000</p>
+        </div>
       </div>
     </div>
-  </nav>
 
-</header>
-
+  </section>
 
 
 
@@ -67,15 +151,15 @@
 
 
 
+  <section class="footer">
+    <a class="footer-font-awesome" href=""><i class="fa-brands fa-facebook"></i></a>
+    <a class="footer-font-awesome" href=""><i class="fa-brands fa-instagram"></i></a>
+    <a class="footer-font-awesome" href=""><i class="fa-solid fa-envelope"></i></a>
+    <a class="footer-font-awesome" href=""><i class="fa-brands fa-twitter"></i></a>
+    <a class="footer-font-awesome" href=""><i class="fa-brands fa-linkedin"></i></a>
+    <p>©Copyright. Designed And Developed By David Akanmu</p>
+  </section>
 
-<section class="footer">
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-facebook"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-instagram"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-solid fa-envelope"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-twitter"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-linkedin"></i></a>
-<p>©Copyright. Designed And Developed By David Akanmu</p>
-</section>
+</body>
 
-  </body>
 </html>
