--- a/index.html
+++ b/index.html
@@ -186,25 +186,25 @@
     <div class="row contact">
       <div class="col-lg-3 contact-text">
         <h4>Information</h4>
-        <p>About us</p>
-        <p>Contact us</p>
-        <p>News</p>
-        <p>Store</p>
+        <p><a href="" class="contact-link">About us</a></p>
+        <p><a href="" class="contact-link">Contact us</a></p>
+        <p><a href="" class="contact-link">News</a></p>
+        <p><a href="" class="contact-link">Store</a></p>
       </div>
       <div class="col-lg-3 contact-text">
         <h4>Collections</h4>
-        <p>Wooden Chair</p>
-        <p>Royal Cloth Sofa</p>
-        <p>Bed</p>
-        <p>Hanging Lamp</p>
+        <p><a href="" class="contact-link">Wooden Chair</a></p>
+        <p><a href="" class="contact-link">Royal Cloth Sofa</a></p>
+        <p><a href="" class="contact-link">Bed</a></p>
+        <p><a href="" class="contact-link">Hanging Lamp</a></p>
       </div>
       <div class="col-lg-3 contact-text">
         <h4>My Accounts</h4>
-        <p>My Account</p>
-        <p>Wishlist</p>
-        <p>Community</p>
-        <p>Order History</p>
-        <p>My Cart</p>
+        <p><a href="" class="contact-link">My Account</a></p>
+        <p><a href="" class="contact-link">Wishlist</a></p>
+        <p><a href="" class="contact-link">Community</a></p>
+        <p><a href="" class="contact-link">Order History</a></p>
+        <p><a href="" class="contact-link">My Cart</a></p>
       </div>
       <div class="col-lg-3 contact-text">
         <h4>Newsletter</h4>
@@ -216,11 +216,11 @@
 
 
 <section class="footer">
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-facebook"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-instagram"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-solid fa-envelope"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-twitter"></i></a>
-<a class="footer-font-awesome" href="#"><i class="fa-brands fa-linkedin"></i></a>
+<a class="footer-font-awesome" href=""><i class="fa-brands fa-facebook"></i></a>
+<a class="footer-font-awesome" href=""><i class="fa-brands fa-instagram"></i></a>
+<a class="footer-font-awesome" href=""><i class="fa-solid fa-envelope"></i></a>
+<a class="footer-font-awesome" href=""><i class="fa-brands fa-twitter"></i></a>
+<a class="footer-font-awesome" href=""><i class="fa-brands fa-linkedin"></i></a>
 <p>©Copyright. Designed And Developed By David Akanmu</p>
 </section>
 
