--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="col-lg-3 contact-text">
         <h4>Newsletter</h4>
         <p>Subscribe to get latest news, update and information</p>
-        <button type="button" class="btn btn-outline-light btn-xs" style="color:#FFBF00; border: 1px solid;">Subscribe</button>
+        <button type="button" class="btn btn-outline-light btn-xs" style="color:#FFBF00; border: 1px solid;" href="">Subscribe</button>
       </div>
     </div>
   </section>
